--- a/src/main/resources/templates/file-upload-status.html
+++ b/src/main/resources/templates/file-upload-status.html
@@ -19,24 +19,24 @@
 
                     <!--display users list-->
                     <table class="table table-striped" th:if="${status}">
-                        <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">ID</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Country</th>
-                            <th scope="col">Age</th>
-                        </tr>
-                        </thead>
+<!--                        <thead>-->
+<!--                        <tr>-->
+<!--                            <th scope="col">#</th>-->
+<!--                            <th scope="col">ID</th>-->
+<!--                            <th scope="col">Name</th>-->
+<!--                            <th scope="col">Email</th>-->
+<!--                            <th scope="col">Country</th>-->
+<!--                            <th scope="col">Age</th>-->
+<!--                        </tr>-->
+<!--                        </thead>-->
                         <tbody>
                         <tr th:each="user, i : ${users}">
                             <th scope="row" th:text="${i.index + 1}"></th>
-                            <td th:text="${user.id}"></td>
-                            <td th:text="${user.name}"></td>
-                            <td th:text="${user.email}"></td>
-                            <td th:text="${user.countryCode}"></td>
-                            <td th:text="${user.age}"></td>
+                            <td th:text="${user}"></td>
+<!--                            <td th:text="${user.name}"></td>-->
+<!--                            <td th:text="${user.email}"></td>-->
+<!--                            <td th:text="${user.countryCode}"></td>-->
+<!--                            <td th:text="${user.age}"></td>-->
                         </tr>
                         </tbody>
                     </table>
