--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,12 +8,12 @@
 
 <main>
 
-    <form method="POST" th:action="@{/upload-csv-file}" enctype="multipart/form-data">
+    <form method="POST" th:action="@{/upload}" enctype="multipart/form-data">
         <div class="form-group mt-3">
             <label for="file">Select a CSV file</label>
             <input type="file" name="file" class="form-control-file" id="file" accept=".csv">
         </div>
-        <button type="submit" class="btn btn-primary">Import Users</button>
+        <button type="submit" class="btn btn-primary">Import Data</button>
     </form>
 
 </main>
